--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -23,7 +23,7 @@
         <div class="container-login100">
             <div class="wrap-login100 p-t-50 p-b-90">
                 <form action="{{url_for('try_login')}}" method="POST" class="login100-form validate-form flex-sb flex-w">
-                    <span class="login100-form-title p-b-51"> Sercle </span>
+                    <span class="login100-form-title p-b-51"> 조채현 바보</span>
 
                     <div class="wrap-input100 validate-input m-b-16" data-validate="Username is required">
                         <input class="input100" type="text" id="email" name="email" placeholder="Username">
