--- a/flask/templates/userinfo.html
+++ b/flask/templates/userinfo.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="{{ url_for('change_info')}}" method="POST">
+    <form action="{{ url_for('manager.change_info')}}" method="POST">
         <div class="list-group">
             <p class="list-group-item list-group-item-action active">유저 정보</p>
         </div>
